fix some typos in measurements management